--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1869,12 +1869,41 @@ iframe[sandbox] .read-article {
       display: flex;
       flex-direction: column;
       cursor: pointer;
+      align-items: center;
   }
 
   .videothumbnail {
     margin-bottom: 25px;
+    align-items: center;
   }
 
+  .row {
+    --bs-gutter-x: 0.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-direction: column;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-left: calc(0.5 * var(--bs-gutter-x));
+    margin-right: calc(0.5 * var(--bs-gutter-x));
+    row-gap: 33px;
+  }
+  .form-control {
+    display: block;
+    width: 204%;
+    
+}
+.offerings-heading{
+  // margin-bottom: -112px;
+}
+.viewall{
+  margin-left: 102px;
+  display: flex;
+  flex-direction: column;
+}
+h6{
+  margin-top: 52px;
+    margin-bottom: 1.5rem;
+}
   }
   // mobile view of website...............................................
 
