--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,13 @@ b {
   font-size: 100%;
 }
 
+.cursore2{
+  cursor: pointer;
+}
+.vdoiframe{
+  width:800px;
+ height:500px;
+}
 a,
 u {
   text-decoration: none;
@@ -529,6 +536,7 @@ iframe[sandbox] .read-article {
 }
 .nav-link {
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 //search bar in trainings list page
@@ -2071,7 +2079,10 @@ h6{
   /* width: 25%; */
 }
 
-
+.vdoiframe{
+  width:98%;
+  height:300px;
+}
 // b {
 //   font-size: 42%;
 // }
