--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,6 +43,9 @@ body {
   /* height: 200px; */
 }
 
+.testimonial-modal-container
+{}
+
 .latest_news {
   margin: 1%;
   padding: 1%;
@@ -1555,7 +1558,7 @@ iframe[sandbox] .read-article {
 .testimonial-modal-image {
   align-items: center;
   justify-content: center;
-  padding-left: 40%;
+  margin-left: 25%;
 }
 
 .testimonial-modal-image img {
@@ -1566,16 +1569,7 @@ iframe[sandbox] .read-article {
 .ReactModal__Content {
   max-width: 90%;
 }
-// // .carouselslider {
-// //   // position: absolute;
-// //   top: 50%;
-// //   z-index: 10;
-// //   display: flex;
-// //   justify-content: space-between;
-// //   max-width: 100%;
-// //   min-width: 98%;
-// //   margin: 0 1%;
-// // }
+
 .bcrumbs {
   background: #f8f8f8;
   padding: 17px 46px;
@@ -1625,10 +1619,6 @@ iframe[sandbox] .read-article {
 
 .author_details_container {
   display: flex;
-}
-
-.author_details_container {
-  // height: 5%;
   margin-top: 2%;
   padding-top: 2%;
   margin-bottom: 2%;
@@ -1728,11 +1718,6 @@ row-videos {
 }
 
 
-
-
-
-
-
 @media only screen and (max-width: 375px) {
   .navbar-toggler {
     max-width: 15%;
@@ -1742,6 +1727,7 @@ row-videos {
     max-width: 78%;
   }
 
+  
   .navbar-light {
     font-size: 100%;
     align-items: flex-start;
@@ -1778,7 +1764,7 @@ row-videos {
 
   .ReactModal__Overlay--after-open {
     max-width: 375px;
-    max-height: 70%;
+    min-height: 100%;
   }
 
   .navbar > .container,
@@ -1833,8 +1819,6 @@ row-videos {
     line-height: 28px;
     padding: 0 10px;
     display: table;
-    /* color: #d6644a; */
-    /* -webkit-transition: 0.4s; */
     transition: 0.4s;
     text-decoration: none;
     cursor: pointer;
@@ -2037,27 +2021,13 @@ h6{
     text-decoration: none;
   }
 
-  .author_profile {
-    height: 10%;
-  }
-
-
   .fa
   {
     size: 5%;
   }
 
   .author_profile {
-    max-width: 13%;
-}
-
-.author_details_container {
-  margin-top: 2%;
-  padding-top: 2%;
-  margin-bottom: 2%;
-  justify-content: space-around;
-  align-items: center;
-  justify-content: flex-end;
+    max-width: 4%;
 }
 
 .fa {
@@ -2065,15 +2035,41 @@ h6{
   padding-left: 4%;
 }
 
+.ReactModal__Content ReactModal__Content--after-open
+{
+  position: relative;
+  inset: 50% auto auto 50%;
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(255, 255, 255);
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  max-width: 85%;
+  max-height: 113%;
+  margin-top: 37%;
+}
+
+.ReactModal__Content {
+  max-width: 90%;
+  max-height: 110%;
+  margin-top: 34%;
+}
+
 .author_details_container {
   margin-top: 2%;
   padding-top: 2%;
   margin-bottom: 2%;
   justify-content: space-around;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 60%;
+  align-items: self-start;
+  justify-content: space-between;
+  font-size: 56%;
+  margin-right: -15%;
 }
+
+
  .col-3 {
   flex: 0 0 auto;
   /* width: 25%; */
@@ -2087,12 +2083,18 @@ h6{
 .by_author
 {
   font-size: 60%;
+  margin-left: 2%;
 }
 
 .fa-copy
 {
   margin: 0;
   padding: 0;
+}
+
+.testi_name
+{
+  justify-content: center;
 }
 
 }
