--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,20 @@
   margin-left: 13%;
   margin-top: 5%;
 }
+.blogDetails{
+  margin-left: 6%;
+}
+.headingleft{
+  font-family: Montserrat,sans-serif;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #333;
+    background: #fff;
+    position: relative;
+    margin-top: 20px;
+    float: left;
+}
 
 .about_title {
   font-weight: 500;
@@ -299,7 +313,7 @@ h4 {
 .footer_container {
   font-size: 90%;
   background: #1e1e1e;
-  padding: 45px 0 35px;
+  padding: 14px 0 13px;
   color: #bbb;
   line-height: 178%;
   // background-color: rgb(46, 46, 46);
@@ -558,8 +572,9 @@ iframe[sandbox] .read-article {
 .traininglists {
   // margin-top: 40px;
   // margin-bottom: 53px;
-  margin-right: -1%;
-  margin-left: -1%;
+  margin-right: 9%;
+  margin-left: 9%;
+  margin-bottom: 5%;
 }
 .row {
   --bs-gutter-x: 1.5rem;
@@ -639,8 +654,8 @@ body {
 
 .search {
   position: relative;
-  margin-bottom: 20px;
-  margin-top: 17%;
+  margin-bottom: 13px;
+  margin-top: 7%;
   justify-content: flex-end;
 }
 
@@ -1959,7 +1974,8 @@ row-videos {
   .footer_container {
     font-size: 90%;
     background: #1e1e1e;
-    padding: 45px 0 35px;
+   
+    padding: 14px 0 35px;
     color: #bbb;
     line-height: 178%;
     // background-color: rgb(46, 46, 46);
@@ -2306,6 +2322,9 @@ row-videos {
   .traininglists {
     margin-top: 40px;
     margin-bottom: 53px;
+    // n-right: -1%;
+    margin-left: -1%;
+    margin-bottom: 5%;
   }
   .bcrumbs {
     background: #f8f8f8;
