--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,8 +5,28 @@
   margin: 0%;
   box-sizing: border-box;
   text-decoration: none;
+ 
 }
 
+// body{
+//   background:#fff;
+// }
+// .testimonials_container {
+//   background-color: rgb(234, 234, 234);
+//   text-align: center;
+//   margin: 1%;
+//   padding: 2%;
+//   border-radius: 9px;
+// }
+
+// .testimonial-modal-image img {
+//   width: 30px;
+//   height: auto;
+// }
+.testimonial-modal-container{
+  display: flex;
+  flex-direction: row;
+}
 .authorandsmlinks {
   display: flex;
   flex-direction: row;
@@ -241,13 +261,7 @@ h4 {
   border-radius: 9px;
 }
 
-.testimonials_container {
-  background-color: rgb(234, 234, 234);
-  text-align: center;
-  margin: 1%;
-  padding: 2%;
-  border-radius: 9px;
-}
+
 
 // .about {
 //   padding-left:  10%;
@@ -395,6 +409,7 @@ h4 {
     color: white;
   }
 }
+
 
 .alice-carousel__next-btn
 {
@@ -1206,13 +1221,7 @@ h1 {
   border-radius: 9px;
 }
 
-.testimonials_container {
-  background-color: rgb(234, 234, 234);
-  text-align: center;
-  margin: 1%;
-  padding: 2%;
-  border-radius: 9px;
-}
+
 
 // .about {
 //   padding-left: 3%;
@@ -1639,11 +1648,10 @@ iframe[sandbox] .read-article {
 
 .home_page_slider_testmonial {
   margin-left: 10%;
-  width: 100%;
-  height: auto;
+  // height: auto;
   display: inline-block;
-  width: 150px;
-  height: 150px;
+  width: 50%;
+  height: 100%;
   border-radius: 50%;
 
   background-repeat: no-repeat;
@@ -1653,6 +1661,8 @@ iframe[sandbox] .read-article {
 
 .testimonial-container {
   padding: 3%;
+  padding-left: 10%;
+  padding-right: 10%;
   display: flex;
   width: 100%;
   height: auto;
@@ -1683,8 +1693,12 @@ iframe[sandbox] .read-article {
 }
 
 .testimonial-modal-image img {
-  width: 30px;
-  height: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.testimonial-modal-body{
+  padding-left: 2%;
 }
 
 .navbar-light {
@@ -1692,8 +1706,8 @@ iframe[sandbox] .read-article {
 }
 
 .testimonial-body {
-  margin-left: 3%;
-  width: 75%;
+  margin-left: -9%;
+  width: 64%;
 }
 
 .read_more:hover {
@@ -1709,16 +1723,13 @@ iframe[sandbox] .read-article {
   z-index: 15;
 }
 
-.testimonial-modal-image {
-  align-items: center;
-  justify-content: center;
-  margin-left: 25%;
-}
+// .testimonial-modal-image {
+//   align-items: center;
+//   justify-content: center;
+//   margin-left: 25%;
+// }
 
-.testimonial-modal-image img {
-  height: 200px;
-  width: 150px;
-}
+
 
 .ReactModal__Content {
   max-width: 90%;
@@ -1889,14 +1900,18 @@ row-videos {
 }
 
 .read_more_testi {
-  max-width: 92%;
-  margin-bottom: 2%;
+  // max-width: 92%;
+  // margin-bottom: 2%;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
+
+  
   overflow: hidden;
   text-overflow: ellipsis;
-  // display: -webkit-box;
-  // -webkit-line-clamp: 8; /* number of lines to show */
-  // line-clamp: 8;
-  // -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 4; /* number of lines to show */
+          line-clamp: 4; 
+  -webkit-box-orient: vertical;
 }
 
 .carousel__wrapper {
@@ -1934,11 +1949,11 @@ row-videos {
     position: sticky;
   }
 
-  .testimonial-container {
-    display: inline;
-    width: 100%;
-    height: auto;
-  }
+  // .testimonial-container {
+  //   display: inline;
+  //   width: 100%;
+  //   height: auto;
+  // }
 
   .testimonial-image {
     align-items: center;
