--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1536,18 +1536,28 @@ iframe[sandbox] .read-article {
   border: 1px solid #ccc;
   background-color: #fafafa;
   padding: 2%;
-}
-
-.blog-description-container p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 7; /* number of lines to show */
+          line-clamp: 7; 
+  -webkit-box-orient: vertical;
+  max-width: 100%;
+  height: 90%;
   font-size: 13px;
   color: #666;
+  position: relative;
 }
+
 
 .blog-like-view-container {
   display: flex;
   justify-content: space-around;
   text-align: center;
+  bottom: 0px;
+  margin-bottom: 0%;
 }
+
 .offerings-heading {
   display: flex;
   flex-direction: row;
@@ -1595,6 +1605,46 @@ iframe[sandbox] .read-article {
   position: relative;
 }
 
+
+.home_page_slide .alice-carousel__prev-btn
+{
+  background-color: rgba(255, 255, 255, 0.698);
+  border: rgba(255, 255, 255, 0.698);
+  padding: 9px 18px;
+  margin-right: -5%;
+}
+
+.home_page_slide .alice-carousel__next-btn
+{
+  background-color: rgba(255, 255, 255, 0.698);
+  margin-right: -1%;
+  padding: 9px 18px;
+  border: rgba(255, 255, 255, 0.698);
+  margin-left: -5%; 
+}
+
+
+.home_page_slide .alice-carousel__prev-btn:hover
+{
+  background-color: rgba(255, 255, 255, 0.912);
+  border: rgba(255, 255, 255, 0.912);
+  span
+  {
+    color: rgb(19, 19, 19);
+  }
+}
+
+.home_page_slide .alice-carousel__next-btn:hover
+{
+  background-color: rgba(255, 255, 255, 0.912);
+  border: rgba(255, 255, 255, 0.912);
+  span
+  {
+    color: rgb(19, 19, 19);
+  }
+}
+
+
 .read_more {
   color: white;
   background-color: #000;
@@ -1641,7 +1691,7 @@ iframe[sandbox] .read-article {
 }
 
 .ReactModal__Overlay {
-  background-color: #000 !important;
+  background-color: rgba(23, 23, 23, 0.801) !important;
   z-index: 15;
 }
 
@@ -1802,6 +1852,7 @@ iframe[sandbox] .read-article {
 .offeringsimage {
   background: none;
   border: none;
+  position: relative;
 }
 
 .search_button {
@@ -1827,10 +1878,6 @@ row-videos {
   margin-bottom: 2%;
   overflow: hidden;
   text-overflow: ellipsis;
-  // display: -webkit-box;
-  // -webkit-line-clamp: 8; /* number of lines to show */
-  // line-clamp: 8;
-  // -webkit-box-orient: vertical;
 }
 
 .carousel__wrapper {
@@ -2344,4 +2391,47 @@ row-videos {
 
 .nav-link-mobile {
   list-style: none;
+}
+
+.alice-carousel__prev-btn
+{
+  position: absolute;
+  top: 45%;
+  right: 95%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  max-width: 4%;
+}
+
+.alice-carousel__prev-btn:hover
+{
+  background-color: #989999;
+  border: 1px solid #989999;
+  span {
+    color: white;
+  }
+}
+
+.alice-carousel__next-btn
+{
+  position: absolute;
+  top: 45%;
+  left: 95%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  span {
+    color: rgb(0, 0, 0);
+  }
+  max-width: 4%;
+}
+
+.alice-carousel__next-btn:hover
+{
+  background-color: #989999;
+  border: 1px solid #989999;
+  span {
+    color: rgb(255, 255, 255);
+    width: 24px !important;
+    height: 24px !important;
+  }
 }
