--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -275,11 +275,10 @@ h4 {
   transition: 0.5s;
 }
 .titleA {
-  // margin: 0 0 22px;
   font-size: 16px;
   color: "whitesmoke";
   text-transform: uppercase;
-  color: #eee;
+  color: #EEEEEE;
 
   margin: 0 0 16px;
 }
@@ -302,11 +301,10 @@ h4 {
   padding: 45px 0 35px;
   color: #bbb;
   line-height: 178%;
-  // background-color: rgb(46, 46, 46);
   display: flex;
   flex-direction: row;
-
-  /* overflow: hidden; */
+  font-family: Raleway, sans-serif;
+  font-size:13px;
 }
 
 .description-block {
@@ -927,6 +925,8 @@ h5.heading span {
 
 .container {
   background-color: #fff;
+  font-family: Montserrat , sans-serif;
+  font-size: 14px;
 }
 
 //contact form
@@ -1006,6 +1006,18 @@ body {
   padding: 1%;
   width: 33.3%;
   height: 200px;
+  font-size: 13px;
+  color: #BBBBBB;
+}
+
+.fa-phone
+{
+  color: #000;
+}
+
+.fa-envelope-o
+{
+  color: #000;
 }
 
 // .website_tags {
@@ -1058,17 +1070,23 @@ body {
 
 .footer_bar_items {
   margin-left: 1%;
-  // padding: 45px 0 35px;
-  font-size: 15px;
+  font-size: 13px;
   cursor: pointer;
   color: rgb(251, 246, 244);
   text-decoration: none;
   background: none;
   border: none;
   text-transform: capitalize;
+  color: #BBBBBB;
 }
 .footer_bar_items:hover {
   color: rgb(251, 152, 116);
+}
+
+.footer_part
+{
+font-family: Raleway, sans-serif;
+font-size:13px;
 }
 
 .eklakshya {
@@ -1076,6 +1094,7 @@ body {
   padding-left: 5px;
   padding-right: 5px;
   cursor: pointer;
+  color : #d6644a
 }
 .eklakshya:hover {
   /* font-size: 15px; */
@@ -1102,11 +1121,11 @@ body {
 }
 
 .navbar_contact {
-  font-size: 70%;
+  font-size: 11px;
   float: right;
   margin-right: 2%;
-  // padding-top: 0.5%;
-  color: rgb(255, 109, 56);
+  color: #d6644a;
+
 }
 
 .contact {
@@ -1361,6 +1380,14 @@ iframe[sandbox] .read-article {
 //   background-color: rgb(250, 246, 212);
 // }
 
+.contact-info
+{
+  font-family: Raleway, sans-serif;
+  font-size:13px;
+  color: #444444;
+}
+
+
 .carouselslide {
   display: flex;
   justify-content: center;
@@ -1416,11 +1443,14 @@ iframe[sandbox] .read-article {
 // }
 .navbar-light {
   background-color: white !important;
+  margin-top: 0.3%;
 }
 .eklf h4 {
   margin-top: 0;
   font-weight: 400;
   font-family: Montserrat;
+  font-size: 24px;
+  color: #ffffff;
 }
 
 .about_container {
@@ -1432,6 +1462,26 @@ iframe[sandbox] .read-article {
 
 .blog_container {
   margin-left: 8%;
+}
+
+.view_all_posts
+{
+  margin: auto;
+}
+
+.category_title
+{
+  cursor: pointer;
+  background: rgba(247, 246, 246, 0.682);
+  max-width: 90%;
+  padding: 2%;
+  border-radius: 3px;
+}
+
+.category_title:active
+{
+  cursor: pointer;
+  background: rgba(216, 215, 215, 0.682);
 }
 
 .tablinks {
@@ -1527,7 +1577,6 @@ iframe[sandbox] .read-article {
   font-size: 1rem;
   margin-top: 0;
   font-weight: 400;
-  text-transform: uppercase;
   color: #333;
 }
 
@@ -1631,6 +1680,7 @@ iframe[sandbox] .read-article {
   span
   {
     color: rgb(19, 19, 19);
+    size: 40%;
   }
 }
 
@@ -1675,6 +1725,7 @@ iframe[sandbox] .read-article {
 
 .navbar-light {
   background-color: white;
+  margin-top: 0.3%;
 }
 
 .testimonial-body {
@@ -1761,6 +1812,8 @@ iframe[sandbox] .read-article {
 .blog-details-container {
   margin-left: 7%;
   margin-right: 3%;
+  font-family: Raleway,sans-serif;
+  font-size: 13px;
 }
 
 .authorND {
@@ -1841,12 +1894,20 @@ iframe[sandbox] .read-article {
   background: #d6643c;
   padding: 0 20px;
   display: inline-block;
-  font-family: Montserrat;
-  font-size: 11px;
   border-radius: 3px;
   color: #fff;
   text-transform: uppercase;
   margin: -31px 84px 0;
+  font-size: 13px;
+  line-height: 22px;
+  font-family: Raleway,sans-serif;
+  padding: 7px 17px;
+}
+
+.blog-details-container .linkDiv a
+{
+  margin-left: 2%;
+
 }
 
 .offeringsimage {
@@ -1878,6 +1939,8 @@ row-videos {
   margin-bottom: 2%;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-family: Raleway, sans-serif;
+  font-size:13px;
 }
 
 .carousel__wrapper {
@@ -1895,20 +1958,27 @@ row-videos {
     max-width: 15%;
   }
 
+  .justify-text
+  {
+    text-align: justify;
+    padding-right: -2%;
+    margin-right: -2%;
+  }
+
   .navbar-brand {
     max-width: 78%;
   }
 
   .navbar-light {
-    font-size: 100%;
     align-items: flex-start;
     background-color: white !important;
     padding-bottom: 3%;
+    margin-bottom: 0.3%;
   }
 
   .bg-light {
-    font-size: 77%;
     align-items: flex-start;
+    margin-top: 0.4%;
   }
 
   .sticky-top {
@@ -1964,6 +2034,10 @@ row-videos {
   .ekl-description {
     margin-right: -233%;
     padding-right: 35px;
+    font-family: Raleway, sans-serif;
+    font-size:13px;
+    color: #BBBBBB;
+
   }
 
   .social_media_links {
@@ -2180,18 +2254,13 @@ row-videos {
     padding-left: 10%;
   }
 
-  // .lvftl{
-  //   justify-content: space-around;
-  // }
 
   .read_more_testi {
     max-width: 92%;
     overflow: hidden;
     text-overflow: ellipsis;
-    // display: -webkit-box;
-    // -webkit-line-clamp: 8; /* number of lines to show */
-    // line-clamp: 8;
-    // -webkit-box-orient: vertical;
+    font-family: Raleway, sans-serif;
+    font-size:13px;
   }
 
   .ReactModal__Content {
@@ -2257,7 +2326,7 @@ row-videos {
   }
 
   .author_profile {
-    max-width: 4%;
+    max-width: 9%;
   }
 
   .vdoiframe {
@@ -2299,6 +2368,7 @@ row-videos {
     justify-content: space-between;
     font-size: 56%;
     margin-right: -15%;
+    font-size: 80%;
   }
 
   .col-3 {
@@ -2318,8 +2388,8 @@ row-videos {
     /* height: 200px; */
   }
   .by_author {
-    font-size: 60%;
-    margin-left: 2%;
+    font-size: 74%;
+    margin-left: -34%;
   }
 
   .footer_bar_container {
@@ -2364,6 +2434,9 @@ row-videos {
 .testi_name {
   justify-content: center;
   list-style-type: none;
+  font-family: Montserrat;
+  font-size:20px;
+  color:#444444;
 }
 
 
@@ -2434,4 +2507,55 @@ row-videos {
     width: 24px !important;
     height: 24px !important;
   }
+}
+
+.privacy_title
+{
+  font-family: Montserrat,sans-serif;
+  font-size:20px;
+  color: #333333;
+  text-transform: uppercasec;
+}
+
+.privacy_content
+{
+  font-family: Raleway, sans-serif;
+  font-size:13px;
+  color: #444444;
+}
+
+.cancelation_title
+{
+  font-family: Montserrat,sans-serif;
+  font-size:20px;
+  color:#333333 !important;
+  text-transform: uppercase;
+}
+
+.cancel_content
+{
+  font-family: Raleway, sans-serif;
+  font-size:13px;
+  color:#444444;
+}
+
+.terms_column
+{
+  font-family: Montserrat,sans-serif;
+  font-size:20px;
+  color:#333333 !important;
+  text-transform: uppercase;
+}
+
+
+.terms_content
+{
+  font-family: Raleway, sans-serif;
+  font-size:13px;
+  color:#666666 !important;
+}
+
+.navlink
+{
+  color: #444444;
 }
